:globe_with_meridians: Fix type=search input on Safari

--- a/packages/fyndiq-component-input/input.css
+++ b/packages/fyndiq-component-input/input.css
@@ -9,6 +9,7 @@
   font-size: 15px;
   line-height: 48px;
   outline: 0;
+  appearance: none;
 
   &:invalid {
     box-shadow: none;
@@ -79,6 +80,7 @@
   display: flex;
   align-items: center;
   padding: 2px 4px;
+  margin: 0;
   border: 1px solid transparent;
   border-left: none;
   background: transparent;
